--- a/Sales/Sales/Sales.csproj
+++ b/Sales/Sales/Sales.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Sales.Common\Sales.Common.csproj" />
+  </ItemGroup>
 </Project>
